# SetUp_agent

./: .gitignore  README.md  bootstrap.ps1  pyproject.toml
docs/: agent-loop.html
src/setup_agent/: __init__.py  agent.py  cli.py  console.py  debuglog.py  jobs.py  llm.py  notify.py  safety.py  state.py
src/setup_agent/tools/: __init__.py  config.py  packages.py  system.py  windows.py
